--- a/_config.yml
+++ b/_config.yml
@@ -33,12 +33,12 @@ youtube_username                          :
 
 
 # Theme Settings
-topbar_color                              : "#000000"
+topbar_color                              : "#ffffff"
 topbar_transparency                       : 0.1
-topbar_title_color                        : "#ffffff"
+topbar_title_color                        : "#000000"
 
 cover_image                               :                     # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#363b3d"
+cover_overlay_color                       : "#ffffff"
 cover_overlay_transparency                : 0.8
 
 device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
