--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/yourlogo.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Today's Read                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : Free                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Today's top headlines. Currently beta testing. To download our TestFlight beta, click the button below!
+app_description                           : Today's top headlines. \n\nCurrently beta testing. To download our TestFlight beta, click the button below!
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
