--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ enable_smart_app_banner                   : true                                
 
 # Information About Yourself
 your_name                                 : Nick Casson                            
-your_link                                 : https://nrc-systems.com                  
+your_link                                 : mailto:contact@todaysread.co              
 your_city                                 : Auburn, AL                                
-email_address                             : nrc0024@auburn.edu
+email_address                             : contact@todaysread.co
 facebook_username                         :                                           
-instagram_username                        : 
+instagram_username                        : todaysreadapp
 twitter_username                          : 
 github_username                           : 
 youtube_username                          :
