--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ features                                  :
 
   - title                                 : Sources
     description                           : We gather the best articles from a wide net of sources all over the world.
-    fontawesome_icon_name                 : magic
+    fontawesome_icon_name                 : globe
     
       - title                             : Sources
     description                           : We gather the best articles from a wide net of sources all over the world.
