--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,11 @@ features                                  :
     
   - title                                 : Categories
     description                           : Choose what category of news that you want to read. Categories include Business, Sports, Tech, Entertainment, and more.
-    fontawesome_icon_name                 : grip-dots
+    fontawesome_icon_name                 : bars
     
   - title                                 : Beautiful Design
     description                           : Enjoy reading your headlines with a timeless, beautiful design that is appealing to lay your eyes on.
-    fontawesome_icon_name                 : stars
+    fontawesome_icon_name                 : star
 
 # Theme Settings
 topbar_color                              : "#ffffff"
@@ -55,9 +55,9 @@ cover_image                               :                     # Replace with a
 cover_overlay_color                       : "#ffffff"
 cover_overlay_transparency                : 0.8
 
-device_color                              : black                                     # Set to: blue, black, yellow, coral or white.
+device_color                              : white                                     # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#ffffff"
+body_background_color                     : "#000000"
 
 link_color                                : "#1d63ea"
 
@@ -65,11 +65,11 @@ app_title_color                           : "#000000"
 app_price_color                           : "#000000"
 app_description_color                     : "#000000"
 
-feature_title_color                       : "#000000"
-feature_text_color                        : "#666666"
+feature_title_color                       : "#ffffff"
+feature_text_color                        : "#ffffff"
 
-feature_icons_foreground_color            : "#ffffff"
-feature_icons_background_color            : "#000000"
+feature_icons_foreground_color            : "#000000"
+feature_icons_background_color            : "#ffffff"
 
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
