--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ features                                  :
 # Theme Settings
 topbar_color                              : "#ffffff"
 topbar_transparency                       : 0.1
-topbar_title_color                        : "#000000"
+topbar_title_color                        : "#ffffff"
 
 cover_image                               :                     # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#ffffff"
@@ -66,7 +66,7 @@ app_price_color                           : "#000000"
 app_description_color                     : "#000000"
 
 feature_title_color                       : "#ffffff"
-feature_text_color                        : "#ffffff"
+feature_text_color                        : "#D3D3D3"
 
 feature_icons_foreground_color            : "#000000"
 feature_icons_background_color            : "#ffffff"
