--- a/_config.yml
+++ b/_config.yml
@@ -48,18 +48,18 @@ features                                  :
 
 # Theme Settings
 topbar_color                              : "#ffffff"
-topbar_transparency                       : 0.1
-topbar_title_color                        : "#ffffff"
+topbar_transparency                       : 1.0
+topbar_title_color                        : "#000000"
 
 cover_image                               :                     # Replace with alternative image path or image URL.
 cover_overlay_color                       : "#ffffff"
-cover_overlay_transparency                : 0.8
+cover_overlay_transparency                : 1.0
 
 device_color                              : white                                     # Set to: blue, black, yellow, coral or white.
 
 body_background_color                     : "#000000"
 
-link_color                                : "#1d63ea"
+link_color                                : "#ffffff"
 
 app_title_color                           : "#000000"
 app_price_color                           : "#000000"
@@ -74,7 +74,7 @@ feature_icons_background_color            : "#ffffff"
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
 
-footer_text_color                         : "#666666"
+footer_text_color                         : "#ffffff"
 
 
 
