--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 page_title                                : Today's Read                                          # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id                                :                                 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_id                                : 1603169751                                 # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 ios_app_country                           : us                                        # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
 
 appstore_link                             : https://testflight.apple.com/join/dFJGerNV                                    # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
@@ -22,7 +22,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Nick Casson                            
 your_link                                 : mailto:contact@todaysread.co              
-your_city                                 : Auburn, AL                                
+your_city                                 : Auburn, AL                            
 email_address                             : contact@todaysread.co
 facebook_username                         :                                           
 instagram_username                        : todaysreadapp
