--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Nick Casson                            
-your_link                                 : mailto:contact@todaysread.co              
+your_name                                 : Burn Labs                            
+your_link                                 : www.burnlabs.co             
 your_city                                 : Auburn, AL                            
 email_address                             : contact@todaysread.co
 facebook_username                         :                                           
